fix alignment

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav {
     }
 
     & a {
-        padding: 5px 50px 5px 15px;
+        padding: 5px 50px 5px 0;
         color: inherit;
         text-decoration: inherit;
         display: flex;
@@ -53,7 +53,7 @@ nav {
         & svg {
             height: 40px;
             width: 40px;
-            padding-right: 10px;
+            padding: 0 15px;
         }
     }
 
